--- a/Bonfire.colloquyStyle/Contents/Info.plist
+++ b/Bonfire.colloquyStyle/Contents/Info.plist
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Campfire Colloquy style</string>
+	<string>Bonfire Colloquy style</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.blaimhq.colloquy.style.campfire</string>
+	<string>com.blaimhq.colloquy.stylebonire</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Campfire</string>
+	<string>Bonfire</string>
 	<key>CFBundlePackageType</key>
 	<string>coSt</string>
 	<key>JVStyleOptions</key>
@@ -118,6 +118,6 @@
 		</dict>
 	</array>
 	<key>NSHumanReadableCopyright</key>
-	<string>Claudio Perez Gamayo</string>
+	<string>Claudio Perez Gamayo (Gianni Chiappetta)</string>
 </dict>
 </plist>
